# fluvio-connectors

./: Makefile  README.md
.github/workflows/: ci.yml
build-scripts/: ld.lld
connectors-manager/: Cargo.toml
connectors-manager/src/: config.rs
connectors-manager/src/group/: create.rs  delete.rs  list.rs
container-build/: .gitignore
rust-connectors/common/src/: opt.rs
rust-connectors/sinks/kafka/: Cargo.toml
syslog/: Cargo.toml  connector.toml
syslog/src/: config.rs  error.rs  main.rs  produce.rs
test-connector/: config.yaml
