[package]
name = "fluvio-syslog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
fluvio = "0.9.0"
thiserror = "1.0.25"
tokio = { version = "1.9.0", features = ["macros", "rt", ] }
notify = "5.0.0-pre.11"
futures-util = "0.3.15"
cfg-if = "1.0.0"
fluvio-future = { version = "0.3.8", features = ["subscriber"] }

# Filtering stuff
syslog_loose = "0.14.0"
regex = "1.5"

# Configuration stuff
serde = "1.0.127"
toml = "0.5"
